[package]
name = "reduction"
version = "0.1.0"
edition = "2024"
description = "Opinionated Rust Reverse Proxy"
license = "MIT"

[dependencies]
arrayvec = "0.7.6"
axum = { version = "0.8.9", features = ["http2"] }
bitcode = "0.6.9"
dashmap = "6.2.1"
governor = "0.10.4"
bytes = "1"
ipnet = { version = "2", features = ["serde"] }
http-body = "1"
http-body-util = "0.1.3"
lru = "0.18"
pin-project-lite = "0.2"
hyper = { version = "1.9.0", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1.20", features = ["tokio", "http2"] }
notify = "8.2.0"
parking_lot = "0.12"
opentelemetry = { version = "0.32.0", features = ["trace"] }
opentelemetry-otlp = { version = "0.32.0", features = ["trace"] }
opentelemetry_sdk = { version = "0.32.0", features = ["trace", "rt-tokio"] }
quinn = "0.11.9"
rustls = "0.23.40"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "net", "io-util", "macros", "signal", "fs", "sync"] }
tokio-util = "0.7"
tokio-rustls = "0.26.4"
toml = "1.1.2"
tracing = "0.1.44"
tracing-opentelemetry = "0.33.0"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
zstd = "0.13.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rcgen = "0.13"
tempfile = "3.27.0"
tracing-chrome = "0.7"

[profile.release]
debug = true

[[bench]]
name = "router_bench"
harness = false

[[bench]]
name = "balancer_bench"
harness = false

[[bench]]
name = "compression_bench"
harness = false

[[bench]]
name = "ratelimit_bench"
harness = false

[[bench]]
name = "health_bench"
harness = false

[[bench]]
name = "tls_cache_bench"
harness = false
