[package]
name = "reduction"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
description = "Opinionated Rust Reverse Proxy"
license = "MIT"

[features]
default = []
acme = ["dep:instant-acme", "dep:x509-parser"]

[dependencies]
arrayvec = { version = "0.7.6", features = ["serde"] }
axum = { version = "0.8.9", features = ["http2"] }
bitcode = { version = "0.6.9", features = ["arrayvec"] }
dashmap = "6.2.1"
governor = "0.10.4"
bytes = "1"
instant-acme = { version = "0.7", optional = true }
serde_json = "1"
ipnet = { version = "2", features = ["serde"] }
http-body = "1"
http-body-util = "0.1.3"
lru = "0.18"
pin-project-lite = "0.2"
hyper = { version = "1.9.0", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1.20", features = ["tokio", "http2"] }
notify = "8.2.0"
parking_lot = "0.12"
opentelemetry = { version = "0.32.0", features = ["trace"] }
opentelemetry-otlp = { version = "0.32.0", features = ["trace"] }
opentelemetry_sdk = { version = "0.32.0", features = ["trace", "rt-tokio"] }
quinn = "0.11.9"
rcgen = "0.13"
rustls = "0.23.40"
serde = { version = "1.0.228", features = ["derive"] }
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "net", "io-util", "macros", "signal", "fs", "sync"] }
tokio-util = "0.7"
tokio-rustls = "0.26.4"
toml = "1.1.2"
tracing = "0.1.44"
tracing-opentelemetry = "0.33.0"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
x509-parser = { version = "0.17", optional = true }
zstd = "0.13.3"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
tracing-chrome = "0.7"

[profile.release]
debug = true

[profile.dev]
# line tables keep backtraces while avoiding the cost of generating + linking full debuginfo
debug = "line-tables-only"
opt-level = 0

[[bench]]
name = "router_bench"
harness = false

[[bench]]
name = "balancer_bench"
harness = false

[[bench]]
name = "compression_bench"
harness = false

[[bench]]
name = "ratelimit_bench"
harness = false

[[bench]]
name = "health_bench"
harness = false

[[bench]]
name = "tls_cache_bench"
harness = false

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# Financial safety — no floats in calculations
float_arithmetic = "deny"
float_cmp = "deny"
float_cmp_const = "deny"

# No panicking in app code
unwrap_used = "deny"
expect_used = "warn"

# Import hygiene
wildcard_imports = "deny"

# Numeric cast safety
cast_possible_truncation = "deny"
cast_sign_loss = "deny"
cast_lossless = "warn"
as_conversions = "warn"

# Ownership / borrowing
clone_on_copy = "warn"
redundant_clone = "warn"
needless_pass_by_value = "warn"
ptr_arg = "warn"

# Allocation
box_collection = "warn"
redundant_allocation = "warn"

# Style preferences
needless_return = "allow"       # conflicts with project explicit-return style
must_use_candidate = "warn"
str_to_string = "warn"

# Iterator preference
manual_filter_map = "warn"
manual_find_map = "warn"
