[package]
name = "reduction"
version = "0.1.2"
edition = "2024"
rust-version = "1.96.0"
description = "Low Bandwidth Reverse Proxy"
license = "MIT"
# Internal application binary — not published to a registry.
publish = false

[features]
default = []
acme = ["dep:instant-acme", "dep:x509-parser"]

[dependencies]
arrayvec = { version = "0.7.8", features = ["serde"] }
axum = { version = "0.8.9", features = ["http2"] }
bitcode = { version = "0.6.9", features = ["arrayvec"] }
dashmap = "6.2.1"
governor = "0.10.4"
bytes = "1.11.1"
instant-acme = { version = "0.8.5", optional = true }
serde_json = "1.0.150"
ipnet = { version = "2.12.0", features = ["serde"] }
http-body = "1.0.1"
http-body-util = "0.1.3"
lru = "0.18.0"
pin-project-lite = "0.2.17"
hyper = { version = "1.10.1", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1.20", features = ["tokio", "http2"] }
notify = "8.2.0"
parking_lot = "0.12.5"
opentelemetry = { version = "0.32.0", features = ["trace"] }
opentelemetry-otlp = { version = "0.32.0", features = ["trace"] }
opentelemetry_sdk = { version = "0.32.1", features = ["trace", "rt-tokio"] }
quinn = "0.11.11"
# x509-parser feature enables rcgen::Issuer::from_ca_cert_der, used by test/example PKI helpers
# to sign leaf certs from an in-memory CA. Reuses the x509-parser 0.18 already in the tree.
rcgen = { version = "0.14.8", features = ["x509-parser"] }
rustls = "0.23.40"
serde = { version = "1.0.228", features = ["derive"] }
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "net", "io-util", "macros", "signal", "fs", "sync"] }
tokio-util = "0.7.18"
tokio-rustls = "0.26.4"
toml = "1.1.2"
tracing = "0.1.44"
tracing-opentelemetry = "0.33.0"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
x509-parser = { version = "0.18.1", optional = true }
zstd = "0.13.3"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
tracing-chrome = "0.7.2"

[profile.release]
debug = true

[profile.dev]
# line tables keep backtraces while avoiding the cost of generating + linking full debuginfo
debug = "line-tables-only"
opt-level = 0

[[bench]]
name = "router_bench"
harness = false

[[bench]]
name = "balancer_bench"
harness = false

[[bench]]
name = "compression_bench"
harness = false

[[bench]]
name = "ratelimit_bench"
harness = false

[[bench]]
name = "health_bench"
harness = false

[[bench]]
name = "tls_cache_bench"
harness = false

[lints.rust]
# deny (not forbid) so a dependency's macro-generated #[allow(unsafe_code)] can compile;
# first-party unsafe is still rejected unless explicitly allowed.
unsafe_code = "deny"

[lints.clippy]
# float_arithmetic is intentionally relaxed: this is a load balancer / reverse proxy whose core
# domain math is inherently floating-point — weighted rendezvous/jitter balancing, health load &
# latency factors, connection-pressure ratios, OTLP sample ratios, and metric durations. This
# mirrors how the Athene project relaxed float_arithmetic for its graphics/stats domain. Direct
# float equality is still a real bug, so float_cmp / float_cmp_const remain deny.
float_arithmetic = "allow"
float_cmp = "deny"
float_cmp_const = "deny"

# No panicking in app code
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

# Import hygiene
wildcard_imports = "deny"

# Numeric cast safety
cast_possible_truncation = "deny"
cast_sign_loss = "deny"
cast_lossless = "warn"
as_conversions = "warn"

# Ownership / borrowing
clone_on_copy = "warn"
redundant_clone = "warn"
needless_pass_by_value = "warn"
ptr_arg = "warn"

# Allocation
box_collection = "warn"
redundant_allocation = "warn"

# Style preferences
needless_return = "allow"       # conflicts with project explicit-return style
must_use_candidate = "warn"
str_to_string = "deny"

# Iterator preference
manual_filter_map = "warn"
manual_find_map = "warn"

# Disallowed types are intentionally NOT enforced here: this is a concurrent reverse proxy
# where shared state via Arc/RwLock is the core architecture (125+ Arc, 14 RwLock uses). The
# framework's disallowed_types deny (prefer borrowing/actors) does not fit this domain.
disallowed_types = "allow"

[profile.coverage]
inherits = "dev"
opt-level = 0
debug = false

[profile.coverage.package."*"]
opt-level = 0
debug = false
